<resources>
    <string name="app_name">Vibe</string>
    <string name="song_name">Song Name</string>
    <string name="artist">artist</string>
    <string name="start_time">0:00</string>
    <string name="home_name">MusicHomeActivity</string>
    <string name="nowplaying_name">NowPlayingActivity</string>
    <string name="interstitial_full_screen">ca-app-pub-6322285831112645/4409613612</string>
    <string name="play_button">Play Button</string>
    <string name="next_song_button">Next Song</string>
    <string name="previous_song_button">previous song button</string>
    <string name="artist_descr">Name of the Artist</string>
    <string name="songdescr">Name of the Song</string>
    <string name="album_art">Album Art</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="heart_sign">Heart Sign</string>
    <string name="song">song</string>
    <string name="check">check</string>
    <string name="analytics">"ANALYTICS: "</string>
    <string name="setscreenname">"Setting screen name: "</string>
    <string name="image">Image~</string>
    <string name="music_serc">MUSIC SERVICE</string>
    <string name="error1">Error setting data source</string>
    <string name="playing">Playing</string>
    <string name="update">onUpdate</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">Don\'t have an account, Signup !!</string>
    <string name="users">users</string>
    <string name="app_title">app_title</string>
    <string name="signup_activity">SignupActivity</string>
    <string name="creatingUserEmail">createUserWithEmail:onComplete:</string>
    <string name="failed_auth">Authentication failed.</string>
    <string name="succ_reg">You are successfully Registered !!</string>
    <string name="hello">"Hello  "</string>
    <string name="prem_granted">Permission is granted</string>
    <string name="perm_revoked">Permission is revoked</string>
    <string name="perm">"Permission: "</string>
    <string name="was">"was "</string>
</resources>
