<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/widget"
              android:layout_width="match_parent"
              android:layout_height="150dp"
              android:background="@drawable/toolbackground"
              android:orientation="vertical">

    <TextView
        android:id="@+id/nowSong"
        android:layout_width="200dp"
        android:contentDescription="@string/songdescr"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/song_name"
        android:textStyle="normal|bold"/>

    <TextView
        android:id="@+id/nowArtist"
        android:contentDescription="@string/artist_descr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:text="@string/artist"
        android:textAlignment="center"
        android:textStyle="normal|bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play_button"
            android:src="@android:drawable/ic_media_play"
            />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/playButton"
            android:layout_toRightOf="@+id/playButton"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next_song_button"
            android:src="@android:drawable/ic_media_next"/>

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_toLeftOf="@+id/playButton"
            android:layout_toStartOf="@+id/playButton"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous_song_button"
            android:src="@android:drawable/ic_media_previous"/>

    </RelativeLayout>
</LinearLayout>