<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_now_playing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.ajayrwarrier.vibe.NowPlayingActivity">

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/songdescr"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/artistView"
        android:contentDescription="@string/artist_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/nameView"
        app:layout_constraintTop_toBottomOf="@+id/nameView"/>

    <ImageButton
        android:id="@+id/previousButton"
        android:contentDescription="@string/previous_song_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintRight_toLeftOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton"
        app:srcCompat="@android:drawable/ic_media_previous"/>

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:contentDescription="@string/play_button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_media_play"/>

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:contentDescription="@string/next_song_button"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toRightOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton"
        app:srcCompat="@android:drawable/ic_media_next"/>

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumArt"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/totalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumArt"
        app:layout_constraintVertical_bias="1.0"/>

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/album_art"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/artistView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/no_thumbnail"/>

    <SeekBar
        android:id="@+id/seekBar"
        style="@android:style/Widget.DeviceDefault.SeekBar"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/startTime"
        app:layout_constraintTop_toBottomOf="@+id/albumArt"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"/>
</android.support.constraint.ConstraintLayout>
